/* 
  Localizable.strings
  MdEditor

  Created by Alexey Turulin on 1/14/24.
  Copyright © 2024 repakuku. All rights reserved.
*/

// MARK: - Error

"Error.WrongLoginOrPassword.text" = "Wrong login or password";

// MARK: -  Common strings

"Ok.text" = "Ok";
"Error.text" = "Error";

// MARK: - LoginScreen

"LoginScreen.Title" = "Authorization";
"LoginScreen.Textfield.Login.Placeholder" = "Login";
"LoginScreen.Textfield.Password.Placeholder" = "Password";
"LoginScreen.Button.Login.Title" = "Login";

// MARK: - TodoListScreen

"TodoListScreen.Title" = "ToDoList";
"TodoListScreen.Section.Completed.text" = "Completed";
"TodoListScreen.Section.Uncompleted.text" = "Uncompleted";
"TodoListScreen.Section.AllTasks.text" = "All";
"TodoListScreen.Section.Important.text" = "Important";
"TodoListScreen.Section.Regular.text" = "Regular";
